ios gap fix

--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -1,3 +1,7 @@
+:root {
+  --ios-gap: 0px;
+}
+
 body {
   text-rendering: optimizeLegibility;
   font-smoothing: antialiased;
