--- a/app/assets/stylesheets/components/_homepage_hero.scss
+++ b/app/assets/stylesheets/components/_homepage_hero.scss
@@ -10,7 +10,7 @@
   .hero__title {
     z-index: 5;
     padding-top: 111px;
-    height: calc(100vh - 80px);
+    height: calc(100vh - (var(--ios-gap) + 80px));
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -233,7 +233,7 @@
 .homepage .hero {
 
   .hero__title {
-    height: calc(100vh - 90px);
+    height: calc(100vh - (var(--ios-gap) + 90px));
 
     h1 {
       margin-bottom: 6px;
